--- a/community-outreach.html
+++ b/community-outreach.html
@@ -194,7 +194,8 @@
                     <div class="row justify-content-md-center">
                         <div class="col-lg-3 col-md-5 wow fadeInUp">
                             <div class="member">
-                                <img src="img/team-2022/Nasoe Talash 1.jpg" class="img-fluid"
+                                <p>vp.outreach@wise.skule.ca</p>
+                                <!-- <img src="img/team-2022/Nasoe Talash 1.jpg" class="img-fluid"
                                 onmouseover="this.src='img/team-2022/Nasoe Talash 2.jpg';"
                                 onmouseout="this.src='img/team-2022/Nasoe Talash 1.jpg';">
                                 <div class="member-info">
@@ -207,7 +208,7 @@
                                             <a href="https://www.linkedin.com/in/nasoe-talash" target="_blank"><i class="fa fa-linkedin"></i></a>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
