--- a/pd.html
+++ b/pd.html
@@ -131,7 +131,8 @@
                 </div>
                 <section id="team">
                     <div class="row justify-content-md-center">
-                        <div class="col-lg-3 col-md-5 wow fadeInUp">
+                        <p> vp.outreach@wise.skule.ca </p>
+                        <!-- <div class="col-lg-3 col-md-5 wow fadeInUp">
                             <div class="member">
                                 <img src="img/team-2023/Sabrina Zhu.jpg" class="img-fluid">
                                 <div class="member-info">
@@ -146,7 +147,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </section>
 
