--- a/industry-mentorship.html
+++ b/industry-mentorship.html
@@ -143,7 +143,9 @@
                 </div>
                 <section id="team">
                     <div class="row justify-content-md-center">
-                        <div class="col-lg-3 col-md-5 wow fadeInUp">
+                        <p>vp.pd@wise.skule.ca</p>
+                        <!-- <div class="col-lg-3 col-md-5 wow fadeInUp">
+                            
                             <div class="member">
                                 <img src="img/team-2023/Diba Alam.jpg" class="img-fluid" alt="">
                                 <div class="member-info">
@@ -175,7 +177,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </section>
             </div>
