--- a/sponsors.html
+++ b/sponsors.html
@@ -285,7 +285,7 @@
                     <div
                         class="col-lg-2 col-md-3 col-sm-3 col-3 sponsors-item filter-partner wow fadeInUp rounded mx-auto d-block">
                         <div class="sponsors-wrap">
-                            <a href="https://new.abb.com/ca" target="_blank">
+                            <a href="https://global.abb/group/en" target="_blank">
                                 <img src="img/sponsor/abb.png" class="w-100 m-auto img-fluid" alt="abb">
                             </a>
                         </div>
