--- a/hs-outreach.html
+++ b/hs-outreach.html
@@ -122,7 +122,7 @@
                             target="_blank">here</a> or check it out on our events page! </p>
                     </div>
                 </div>
-                <div class="section-header">
+                <!-- <div class="section-header">
                     <h3>Upcoming Events</h3>
                 </div>
 
@@ -130,7 +130,6 @@
                     Mentorship Program (HSMP)</button>
                 <div class="content">
                     <div class="inner-content">
-                        <!--<img src="img/marketing/PwC.png" width="100%" height="650"> -->
                         <p>The High School Mentorship program connects high school students with undergraduate and
                             graduate student mentors
                             to help students with professional and personal development, while introducing them to new
@@ -144,27 +143,7 @@
                             or a
                             <a href="https://forms.gle/9MThnNTxXW7fukNy6" target="_blank">mentee</a> !
                         </p>
-                    </div>
-                </div>
-
-                <button type="button" style="margin-bottom:10px; margin-top:10px" class="collapsible">STEM Students for
-                    a Day</button>
-                <div class="content">
-                    <div class="inner-content">
-                        <!--<img src="img/marketing/PwC.png" width="100%" height="650"> -->
-                        <p>This event gives high school students a unique opportunity to experience university
-                            life at the University of Toronto. This one-day event allows students to attend lectures,
-                            tour research labs, and engage with current
-                            university students and professionals in STEM fields.</p>
-                        <p>On October 11th, 2024 students will get a first-hand look at what it's like to study in the
-                            fields
-                            of science, technology, engineering, and math. The day will include guided tours,
-                            interactive sessions, and the
-                            chance to connect with university mentors who can offer insights into both academic and
-                            personal development.</p>
-                        <p><a href="https://lu.ma/k07c5men" target="_blank" class="btn-register">Register Here!</a></p>
-                    </div>
-                </div>
+                </div> -->
 
                 <script>
                     var coll = document.getElementsByClassName("collapsible");
