--- a/pd.html
+++ b/pd.html
@@ -131,7 +131,7 @@
                 </div>
                 <section id="team">
                     <div class="row justify-content-md-center">
-                        <p> vp.outreach@wise.skule.ca </p>
+                        <p> vp.pd@wise.skule.ca </p>
                         <!-- <div class="col-lg-3 col-md-5 wow fadeInUp">
                             <div class="member">
                                 <img src="img/team-2023/Sabrina Zhu.jpg" class="img-fluid">
