--- a/events.html
+++ b/events.html
@@ -133,7 +133,7 @@
                                 <a href="https://www.zeffy.com/ticketing/wise-2024-high-school-conference " target="_blank" class="btn-current" data-date="2024-11-15">Register Here!</a>
                                 <!-- Tags -->
                                 <div class="tags">
-                                    <span class="tag-university">Highschool</span>
+                                    <span class="tag-highschool">Highschool</span>
                                     <span class="tag-science">Science</span>
                                     <span class="tag-tech">Tech</span>
                                     <span class="tag-engineering">Engineering</span>
