--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="container">
             <div class="logo float-left">
                 <a href="index.html" class="scrollto">
-                    <img src="img/WISE-LOGO.png" alt="" class="img-fluid"></a>
+                    <img src="img/wise-logo-purple.png" alt="" class="img-fluid"></a>
             </div>
             <!-- Nav Bar -->
             <nav class="main-nav float-right d-none d-lg-block">
@@ -106,13 +106,14 @@
         </div>
     </header><!-- #header -->
 
-    <!--=====Opening Bar======-->
-    <section id="intro" class="">
-        <div class="">
-            
+    <!--=====Landing Purple Gradient======-->
+    <section id="intro" class="clearfix">
+        <div class="container ">
+            <img src="img/wise-logo-white.png" alt="Logo" class="logo-img">
+            <p class="intro-title">University of Toronto</p>
+            <p class="intro-subtitle">Women in Science and Engineering</p>
         </div>
     </section>
-
 
     <main id="main">
 
