New About Us (not responsive)

--- a/index.html
+++ b/index.html
@@ -123,19 +123,13 @@
                 <div class="row">
                     <div class="col-lg-7 col-md-6">
                         <div class="mission-content">
-                            <h2>Mission</h2>
-                            <p>The Women in Science and Engineering–University of Toronto Chapter (WISE UofT) was
-                                established in 1999 to support cis/trans women in STEM fields (including 2-spirit and
-                                non-binary folks comfortable in women-centered spaces). We aim to empower them to
-                                achieve their full potential as future engineers, entrepreneurs, scientists, and
-                                leaders. Currently, we are one of the largest and highly-regarded campus organizations
-                                at UofT, with over 700 members. Our goal is to celebrate the achievements of women in
-                                STEM fields and dispel myths surrounding women in STEM.</p>
+                            <h2>ABOUT US</h2>
+                            <p> WISE is a group of future engineers, scientists, doctors, leaders, programmers, researchers, and more, who all have the shared <b> goal of supporting women in STEM</b>. At our heart, we are a community that believes <b> women should lift each other up and work together</b>. From running events spanning from <em> Spilling the Tea on Research </em> to <em> Plasmid Bracelet Workshops </em> we are committed to our initiatives not just because we believe they are necessary, but also because we are <b>passionate about our commitment to each other and to all future women in STEM</b>.</p>
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-6">
                         <div class="mission-img">
-                            <img src="img/mission2.jpg" alt="">
+                            <img src="img/Landing-1.png" alt="">
                         </div>
                     </div>
                 </div>
