Updated AboutUs (not responsive), Initiatives & Mission

--- a/index.html
+++ b/index.html
@@ -117,42 +117,43 @@
 
     <main id="main">
 
-        <!--=====Mission======-->
-        <section id="mission">
+        <!--=====About Us======-->
+        <section id="about">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-7 col-md-6">
-                        <div class="mission-content">
+                    <div class="col-lg-6 col-md-6">
+                        <div class="about-content">
                             <h2>ABOUT US</h2>
-                            <p> WISE is a group of future engineers, scientists, doctors, leaders, programmers, researchers, and more, who all have the shared <b> goal of supporting women in STEM</b>. At our heart, we are a community that believes <b> women should lift each other up and work together</b>. From running events spanning from <em> Spilling the Tea on Research </em> to <em> Plasmid Bracelet Workshops </em> we are committed to our initiatives not just because we believe they are necessary, but also because we are <b>passionate about our commitment to each other and to all future women in STEM</b>.</p>
+                            <p> WISE is a group of future engineers, scientists, doctors, leaders, programmers, researchers, and more, who all have the shared <b> goal of supporting women in STEM</b>. At our heart, we are a community that believes <b> women should lift each other up and work together</b>. 
+                            
+                            <p>From running events spanning from <em> Spilling the Tea on Research </em> to <em> Plasmid Bracelet Workshops, </em> we are committed to our initiatives not just because we believe they are necessary, but also because we are <b>passionate about our commitment to each other and to all future women in STEM</b>.</p></p>
                         </div>
                     </div>
-                    <div class="col-lg-5 col-md-6">
-                        <div class="mission-img">
-                            <img src="img/Landing-1.png" alt="">
+                    <div class="col-lg-6 col-md-6">
+                        <div class="about-img">
+                            <img src="img/home-pg-img.png" alt="">
                         </div>
                     </div>
                 </div>
-            </div>
-        </section><!-- #mission -->
+            </div> 
+        </section><!-- #initiatives -->
 
         <!--=====Our initiatives======-->
         <section id="initiatives" class="section-bg">
             <div class="container">
 
                 <header class="section-header">
-                    <h3>Our Initiatives</h3>
-                    <p>To develop women’s leadership skills, confidence, and involvement in STEM fields, WISE focuses on
-                        building a
-                        supportive community of men and women through <b>5 initiatives</b>:</p>
+                    <h3>OUR INITIATIVES</h3>
+                    <p>To develop women’s leadership skills, confidence, and involvement in STEM fields, WISE focuses on building a
+                        supportive community of men and women through <b>5 initiatives</b>.</p>
                 </header>
 
                 <div class="row justify-content-md-center">
-                    <div class="col-md-6 col-lg-4 wow fadeInUp">
+                    <div class="col-md-6 col-lg-6 wow fadeInUp">
                         <a href="pd.html" style="text-decoration: none; color: inherit;">
                             <div class="box">
-                                <div class="icon" style="background: #fceef3;"><i class="ion-ios-chatboxes-outline"
-                                        style="color: #ff689b;"></i></div>
+                                <div class="icon" style="background-color: rgba(134, 93, 202, .21);"><i class="ion-ios-chatboxes-outline"
+                                        style="color: #43257D;"></i></div>
                                 <h4 class="title">Professional Development</h4>
                                 <p class="description">Our Professional Development initiative hosts interactive
                                     networking events for students throughout
@@ -161,11 +162,11 @@
                         </a>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-md-6 col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                         <a href="community-outreach.html" style="text-decoration: none; color: inherit;">
                             <div class="box">
-                                <div class="icon" style="background: #fff0da;"><i class="ion-ios-people-outline"
-                                        style="color: #e98e06;"></i></div>
+                                <div class="icon" style="background-color: rgb(131, 170, 230, .20);"><i class="ion-ios-people-outline"
+                                        style="color: rgba(42, 124, 247, 0.838);"></i></div>
                                 <h4 class="title">Community Outreach</h4>
                                 <p class="description">Our Community Outreach initiative reaches out to the GTA
                                     community to share our mission of promoting
@@ -174,11 +175,11 @@
                         </a>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
+                    <div class="col-md-6 col-lg-6 wow fadeInUp" data-wow-delay="0.2s">
                         <a href="industry-mentorship.html" style="text-decoration: none; color: inherit;">
                             <div class="box">
-                                <div class="icon" style="background: #e6fdfc;"><i class="ion-ios-paper-outline"
-                                        style="color: #3fcdc7;"></i></div>
+                                <div class="icon" style="background-color: rgba(251, 220, 104, .19);"><i class="ion-ios-paper-outline"
+                                        style="color: rgba(254, 200, 72, 1);"></i></div>
                                 <h4 class="title">Industry Mentorship</h4>
                                 <p class="description">Our Industry Mentorship initiative pairs female undergraduate
                                     students in science and engineering
@@ -187,11 +188,11 @@
                         </a>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 wow fadeInUp">
+                    <div class="col-md-6 col-lg-6 wow fadeInUp">
                         <a href="hs-outreach.html" style="text-decoration: none; color: inherit;">
                             <div class="box">
-                                <div class="icon" style="background: #eafde7;"><i class="ion-ios-navigate-outline"
-                                        style="color:#41cf2e;"></i></div>
+                                <div class="icon" style="background-color: rgba(140, 138, 243, .21);"><i class="ion-ios-navigate-outline"
+                                        style="color: rgba(140, 138, 243, 1);"></i></div>
                                 <h4 class="title">High School Outreach</h4>
                                 <p class="description">Our High School Outreach initiative aims to encourage and present
                                     diverse opportunities in STEM to high
@@ -200,11 +201,11 @@
                         </a>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
+                    <!-- <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
                         <a href="https://conference.wise.skule.ca/" style="text-decoration: none; color: inherit;">
                             <div class="box">
-                                <div class="icon" style="background: #e1eeff;"><i class="ion-ios-world-outline"
-                                        style="color: #2282ff;"></i></div>
+                                <div class="icon" style="background: rgba(49, 24, 197, .14);"><i class="ion-ios-world-outline"
+                                        style="color: rgba(69, 54, 155, 1)"></i></div>
                                 <h4 class="title">National Conference</h4>
                                 <p class="description">Our annual National Conference aims to empower and inspire
                                     individuals to pursue their
@@ -212,37 +213,42 @@
                                 </p>
                             </div>
                         </a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section><!-- #initiatives -->
 
-        <!--=====About Us======-->
-        <section id="about">
+        <!--=====Mission======-->
+        <section id="mission">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-7 col-md-6">
-                        <div class="about-content">
-                            <h2>About Us</h2>
-                            <p>WISE is a group of future engineers, scientists, doctors, leaders, programmers,
-                                researchers, and more, who all have the shared goal of supporting women in STEM. More
-                                simply, we are a group of coffee-loving, poetry-writing girls who have launched rockets,
-                                enjoy biking and cooking new dishes, and who love getting lost in books. At our heart,
-                                we are a community that believes women should lift each other up and work together: we
-                                run self-defense classes for our members, work late into the night DIY-ing for our
-                                events, and bond over shared music interests. We are committed to our initiatives not
-                                just because we believe they are necessary, but also because we are passionate about our
-                                commitment to each other and to all future women in STEM.</p>
+                    <div class="col-lg-12 col-md-6">
+                        <div class="mission-content">
+                            <p><mark style="background-color: rgb(194, 184, 255, .18);">Empowering</mark> women, 2-spirit, and non-binary individuals in STEM to achieve their full potential as engineers, scientists, and leaders while <mark style="background-color: rgb(255, 250, 227, 1)">celebrating their achievements</mark> and <mark style="background-color: rgb(131, 170, 230, .20)"> breaking barriers.</mark></p>
                         </div>
                     </div>
-                    <div class="col-lg-5 col-md-6">
+                    <!-- <div class="col-lg-5 col-md-6">
                         <div class="about-img">
                             <img src="img/aboutus.JPG" alt="">
+                        </div>
+                    </div> -->
+                </div>
+            </div>
+        </section><!-- #mission -->
+
+        <!--=====TODO:Past Events======-->
+        <section id="pastevents">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-md-6">
+                        <div class="section-header">
+                            <h2>PAST EVENTS</h2>
+                            <p></p>
                         </div>
                     </div>
                 </div>
             </div>
-        </section><!-- #about us -->
+        </section><!-- #pastevents -->        
     </main>
 
     <!--=====Footer======-->
