--- a/pd.html
+++ b/pd.html
@@ -54,15 +54,7 @@
             <!-- Nav Bar -->
             <nav class="main-nav float-right d-none d-lg-block">
                 <ul>
-                    <li class="drop-down"><a href="#">About</a>
-                        <ul>
-                            <li><a href="index.html#about">Our Mission</a></li>
-                            <li><a href="our-team.html">Our Team</a></li>
-                            <li><a href="sponsors.html">Our Sponsors</a></li>
-                            <li><a href="https://forms.gle/Rs7u2LsBviyaWunc6" target="_blank">Our Newsletter</a></li>
-                            <li><a href="#footer">Contact Us</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="index.html">About</a></li>
                     <li><a href="events.html">WISE Events</a></li>
                     <li class="drop-down"><a href="#">Initiatives</a>
                         <ul>
