Added Past Events section

--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="about-img">
-                            <img src="img/home-pg-img.png" alt="">
+                            <img src="img/home-pg-img.png" alt="Climate Positive Research Day">
                         </div>
                     </div>
                 </div>
             </div> 
-        </section><!-- #initiatives -->
+        </section><!-- #aboutus -->
 
         <!--=====Our initiatives======-->
         <section id="initiatives" class="section-bg">
@@ -215,32 +215,58 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-6">
                         <div class="mission-content">
-                            <p><mark style="background-color: rgb(194, 184, 255, .18);">Empowering</mark> women, 2-spirit, and non-binary individuals in STEM to achieve their full potential as engineers, scientists, and leaders while <mark style="background-color: rgb(255, 250, 227, 1)">celebrating their achievements</mark> and <mark style="background-color: rgb(131, 170, 230, .20)"> breaking barriers.</mark></p>
+                            <p><mark style="background-color: rgb(194, 184, 255, .18);">Empowering</mark> women, 2-spirit, and non-binary individuals in STEM to achieve their full potential as engineers, scientists, and leaders while <mark style="background-color: rgb(255, 250, 227, 1)">celebrating their achievements</mark> and <mark style="background-color: rgb(131, 170, 230, .20)"> breaking barriers</mark>.</p>
                         </div>
                     </div>
-                    <!-- <div class="col-lg-5 col-md-6">
-                        <div class="about-img">
-                            <img src="img/aboutus.JPG" alt="">
-                        </div>
-                    </div> -->
                 </div>
             </div>
         </section><!-- #mission -->
 
-        <!--=====TODO:Past Events======-->
+        <!--=====Past Events======-->
         <section id="pastevents">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-md-6">
-                        <div class="section-header">
-                            <h2>PAST EVENTS</h2>
-                            <p></p>
+                <header class="section-header">
+                    <h3>PAST EVENTS</h3>
+
+                    <div class="row">
+                        <div class="col-md-4">
+                          <div class="thumbnail">
+                            <a href="img/wisenc.png">
+                              <img src="img/wisenc.png" alt="Wisenc 2024" style="width:100%">
+                              <div class="caption">
+                                <p>Wise National Conference</p>
+                              </div>
+                            </a>
+                          </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="thumbnail">
+                              <a href="img/tech_together.png">
+                                <img src="img/tech_together.png" alt="Tech Together 2024" style="width:100%">
+                                <div class="caption">
+                                  <p>Tech TogetHer</p>
+                                </div>
+                              </a>
+                            </div>
+                          </div>
+
+                          <div class="col-md-4">
+                            <div class="thumbnail">
+                              <a href="img/highschool-conf.png">
+                                <img src="img/highschool-conf.png" alt="Wisenc 2024" style="width:100%">
+                                <div class="caption">
+                                  <p>Highschool Conference</p>
+                                </div>
+                              </a>
+                            </div>
+                          </div>
                         </div>
                     </div>
-                </div>
-            </div>
+                </header>
         </section><!-- #pastevents -->        
     </main>
+
 
     <!--=====Footer======-->
     <footer id="footer" class="section-bg">
