Add missing about us dropdown options

--- a/sponsors.html
+++ b/sponsors.html
@@ -55,7 +55,13 @@
             <!-- Nav Bar -->
             <nav class="main-nav float-right d-none d-lg-block">
                 <ul>
-                    <li><a href="index.html">About</a></li>
+                    <li class="drop-down"><a href="#">About</a>
+                        <ul>
+                            <li><a href="our-team.html">Our Team</a></li>
+                            <li><a href="sponsors.html">Our Sponsors</a></li>
+                            <li><a href="#footer">Contact Us</a></li>
+                        </ul>
+                    </li>
                     <li><a href="events.html">WISE Events</a></li>
                     <li class="drop-down"><a href="#">Initiatives</a>
                         <ul>
