Add missing Wise Logo on navbar

--- a/opportunities.html
+++ b/opportunities.html
@@ -51,7 +51,8 @@
 
         <div class="container">
             <div class="logo float-left">
-                <a href="index.html" class="scrollto"><img src="img/WISE-LOGO.png" alt="" class="img-fluid"></a>
+                <a href="index.html" class="scrollto">
+                    <img src="img/wise-logo-purple.png" alt="" class="img-fluid"></a>
             </div>
 
             <!-- Nav Bar -->
@@ -261,7 +262,7 @@
                     }
                 </script>
 
-                <p class="align"><i>Last updated: Nov 14, 2024</i></p>
+                <p class="align"><i>Last updated: Jan 4, 2025</i></p>
             </div>
         </section>
     </main>
