--- a/events.html
+++ b/events.html
@@ -51,7 +51,8 @@
 
         <div class="container">
             <div class="logo float-left">
-                <a href="index.html" class="scrollto"><img src="img/WISE-LOGO.png" alt="" class="img-fluid"></a>
+                <a href="index.html" class="scrollto">
+                    <img src="img/wise-logo-purple.png" alt="" class="img-fluid"></a>
             </div>
 
             <!-- Nav Bar -->
