--- a/sponsors.html
+++ b/sponsors.html
@@ -49,7 +49,8 @@
         <div id="topbar"></div>
         <div class="container">
             <div class="logo float-left">
-                <a href="index.html" class="scrollto"><img src="img/WISE-LOGO.png" alt="" class="img-fluid"></a>
+                <a href="index.html" class="scrollto">
+                    <img src="img/wise-logo-purple.png" alt="" class="img-fluid"></a>
             </div>
 
             <!-- Nav Bar -->
