fix spelling mistake

--- a/sponsors.html
+++ b/sponsors.html
@@ -293,7 +293,7 @@
                 </div>
 
                 <header class="section-header">
-                    <h4>Contributers</h3>
+                    <h4>Contributors</h3>
                 </header>
 
                 <div class="row">
