--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <section id="about">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-md-6">
+                    <div class="col-lg-6 col-md-12 ">
                         <div class="about-content">
                             <h2>ABOUT US</h2>
                             <p> WISE is a group of future engineers, scientists, doctors, leaders, programmers, researchers, and more, who all have the shared <b> goal of supporting women in STEM</b>. At our heart, we are a community that believes <b> women should lift each other up and work together</b>. 
@@ -127,9 +127,9 @@
                             <p>From running events spanning from <em> Spilling the Tea on Research </em> to <em> Plasmid Bracelet Workshops, </em> we are committed to our initiatives not just because we believe they are necessary, but also because we are <b>passionate about our commitment to each other and to all future women in STEM</b>.</p></p>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6">
+                    <div class="col-lg-6 col-md-12">
                         <div class="about-img">
-                            <img src="img/home-pg-img.png" alt="Climate Positive Research Day">
+                            <img src="img/home-pg-img.png" alt="Climate Positive Research Day" class="img-fluid">
                         </div>
                     </div>
                 </div>
@@ -220,7 +220,7 @@
         <section id="mission">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 col-md-6">
+                    <div class="col-lg-12">
                         <div class="mission-content">
                             <p><mark style="background-color: rgb(194, 184, 255, .18);">Empowering</mark> women, 2-spirit, and non-binary individuals in STEM to achieve their full potential as engineers, scientists, and leaders while <mark style="background-color: rgb(255, 250, 227, 1)">celebrating their achievements</mark> and <mark style="background-color: rgb(131, 170, 230, .20)"> breaking barriers</mark>.</p>
                         </div>
