--- a/our-team.html
+++ b/our-team.html
@@ -1290,7 +1290,7 @@
                 <div class="col-lg-3 col-md-5 ">
                     <div class="member" data-toggle="modal" data-target="#anniepvl">
                         <!--<img src="img/favicon.jpg" class="img-fluid" alt="">-->
-                        <img src="img/color1.jpg" class="img-fluid">
+                        <img src="img/team-2024/Annie-Paulette.jpg" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Annie Vega Legarda</h4>
