update year and sola's study

--- a/our-team.html
+++ b/our-team.html
@@ -95,7 +95,7 @@
     <section id="team">
         <div class="container">
             <div class="section-header">
-                <h3>Meet the WISE UofT 2023-2024 Executive Team</h3>
+                <h3>Meet the WISE UofT 2024-2025 Executive Team</h3>
             </div>
             <!--=====Co-Presidents=====-->
             <div id="team-leads" class="section-header">
@@ -109,7 +109,7 @@
                             <div class="member-info-content">
                                 <h4>Sola Long</h4>
                                 <span>Co-President</span>
-                                <h5>Physics & Stats</h5>
+                                <h5>Physics</h5>
                                 <div class="social">
                                     <a href="mailto:president@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://ca.linkedin.com/in/sola-long" target="_blank"><i
